# centralGPT-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.dev  README.md  all.txt  docker-compose.yml  main.py  parser.py  pyproject.toml  req.Dockerfile  requirements-api.txt  requirements-genai.txt  requirements-ml.txt  requirements.in  requirements.txt  test.py  unused.txt  zerops.yml
.github/workflows/: main_centralgpt-app.yml
later/: exp.py  rag.py  schema_api.py
src/: __init__.py  main.py  requirements.txt
src/app/: application.py
src/app/api_test/: api+tests.http
src/app/db/: dbs.py
src/app/rag/: rag.py
src/app/router/: auth.py  basic.py
src/db/: __init__.py  dbs.py  qdrant_client.py  redis_client.py
src/models/: __init__.py  schema.py
src/router/: __init__.py  auth.py  basic.py  git.py  messages.py  parser.py  rag.py  sessions.py  setup.py
src/router/qdrant_db/: meta.json
src/router/qdrant_db/collection/rag/: storage.sqlite
src/router/storage/: docstore.json  index_store.json
src/service/: auth_service.py  chat_engine_manager.py  message_service.py  rag_service.py  set_up_service.py
src/util/: CustomRepoReader.py
