[project]
name = "abc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-websocket-pubsub>=0.3.9",
    "jwt>=1.3.1",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "llama-index>=0.12.36",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-llms-ollama>=0.5.4",
    "ollama>=0.4.8",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "pytesseract>=0.3.13",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.2",
    "redis>=6.1.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "tesseract>=0.1.3",
    "uvicorn[standard]>=0.34.2",
]
